--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,91 @@
+body {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  background-color: var(--main-color);
+}
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+:root {
+  --main-color: rgb(26, 210, 173);
+  --white-color: rgb(236, 255, 250);
+  --text-color: rgb(32, 104, 86);
+  --highlight-color: rgb(254, 229, 37);
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+}
+.board {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 32px;
+  margin: 64px;
 }
 
 .card {
-  padding: 2em;
+  height: 200px;
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--white-color);
+  border-radius: 12px;
+  transition: all 0.3s ease-in-out;
+  border: 4px solid var(--text-color);
 }
 
-.read-the-docs {
-  color: #888;
+.card:hover {
+  box-shadow: 0 0 20px var(--white-color);
 }
+
+.card:hover img {
+  transform: scale(1.1);
+}
+
+.card:hover .text {
+  transform: scale(1.1);
+}
+
+.text {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: var(--text-color);
+  font-weight: bold;
+  transition: all 0.3s ease-in-out;
+}
+
+.medium {
+  font-size: 32px;
+  color: var(--white-color);
+  margin-bottom: 24px;
+}
+
+.small {
+  font-size: 20px;
+}
+
+.title {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-shadow: 5px 5px 0px var(--text-color);
+  margin: 32px 0 0 64px;
+  color: var(--white-color);
+  font-weight: bold;
+  font-size: 50px;
+}
+
+.score {
+  margin-left: 64px;
+}
+
+img {
+  transition: transform 0.3s ease-in-out;
+  width: 124px;
+  height: 124px;
+}
+
+p {
+  margin: 0;
+}
+
